# feet-arm1

./: .gitignore  CLAUDE.md  SPEEDUP_CHANGES.md  arm2_task_params_e800009.yaml  claude.md  debug.xml  note.txt  patch.py  run_arm.sh  vision_requirements.md
.claude/: settings.local.json
scripts/: install_esp32_suction_udev.sh  run_suction_receiver.sh
scripts/debug/: run_gravity_comp_loaded_real.sh  run_gravity_comp_real.sh  run_suction_demo.sh  run_suction_sender.sh  run_teach_pendant_pendant_side.sh  run_teach_pendant_real.sh  run_teach_pendant_robot_side.sh
src/DM_DeviceSDK/: README.md
src/arm2_task/: CMakeLists.txt  package.xml
src/arm2_task/config/: control_params.yaml  params.yaml  task_params.yaml
src/arm2_task/include/arm2_task/: common_units.hpp  dynamics_manager.hpp  kinematics_engine.hpp  state_machine.hpp
src/arm2_task/launch/: inverse_dynamics_launch.py  inverse_dynamics_target_test_launch.py  mini_launch.py  planner_inverse_task_launch.py  teach_drag_record_launch.py  teach_pendant_follow_launch.py
src/arm2_task/meshes/: Link_4.STL  base_link.STL
src/arm2_task/src/: control_node.cpp  debug_node.cpp  dynamics_manager.cpp  gravity_comp_test_node.cpp  inverse_dynamics_node.cpp  inverse_dynamics_target_test_node.cpp  kinematics_engine.cpp  task_node.cpp  teach_pendant_follow_node.cpp  trajectory_planner_node.cpp
src/arm2_task/urdf/: arm2.urdf
src/dm_motor_sdk_ros/: CMakeLists.txt  README.md  package.xml
src/dm_motor_sdk_ros/config/: dm_motor_robot_driver.yaml  dm_motor_robot_stress.yaml
src/dm_motor_sdk_ros/include/: bsp_can.h  can.h  dm_motor_ctrl.h  dm_motor_drv.h  main.h
src/dm_motor_sdk_ros/launch/: dm_motor_robot_driver.launch.py
src/dm_motor_sdk_ros/src/: can_bsp_sdk.cpp  dm_motor_ctrl.c  dm_motor_drv.c  dm_motor_robot_driver_node.cpp  dm_motor_sdk_example.cpp  dm_motor_sdk_stress_test.cpp
src/ftservo_hls3625_teach/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  package.xml
src/ftservo_hls3625_teach/config/: servo_bus.yaml
src/ftservo_hls3625_teach/include/ftservo_hls3625_teach/: pose_file.hpp  servo_bus.hpp
src/ftservo_hls3625_teach/launch/: state_publisher.launch.py
src/ftservo_hls3625_teach/poses/: example_pose.yaml
src/ftservo_hls3625_teach/src/: bus_state_publisher.cpp  capture_pose.cpp  capture_zero_offsets.cpp  play_pose.cpp  pose_file.cpp  servo_bus.cpp  set_torque.cpp
src/ftservo_hls3625_teach/udev/: 99-ftservo-hls3625.rules
src/robot_msgs/: CMakeLists.txt  package.ros2.xml
src/robot_msgs/action/: MoveJoint.action  MoveToPose.action
src/robot_msgs/msg/: MotorState.msg
src/robot_msgs/srv/: GetPayloadEstimate.srv  GetPickPos.srv  GetPlacePos.srv  SetControllerMode.srv  SetPayloadState.srv
src/suction_serial_bridge/: CMakeLists.txt  package.xml
src/suction_serial_bridge/config/: suction_service.yaml
src/suction_serial_bridge/launch/: suction_service.launch.py
src/suction_serial_bridge/src/: suction_keyboard_client.cpp  suction_service_node.cpp
tools/remote_control_test/: ARM_INTERFACE.md  arm_controller.py
