<?xml version="1.0"?>
<package format="3">
  <name>dm_motor_sdk_ros</name>
  <version>0.0.2</version>
  <description>Minimal ROS2 package using DM USB2CANFD_Dual SDK with dm_motor protocol layer.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
