<?xml version="1.0"?>
<package format="3">
  <name>ftservo_hls3625_teach</name>
  <version>0.1.0</version>
  <description>Self-contained minimal ROS 2 teaching package for FEETECH HLS3625 bus servos.</description>
  <maintainer email="primarymage@example.com">primarymage</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
